--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@quranjs/api": "^1.7.1",
     "axios": "^1.7.3",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-swipeable": "^7.0.1"
   },
