--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-share": "^5.1.0",
