--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.7.3",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
+    "leaflet": "^1.9.4",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.0",
     "react-share": "^5.1.0",
     "react-swipeable": "^7.0.1"
