--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.3",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
+    "idb": "^8.0.3",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
